# cs-study-code

./: .gitignore
add/: tb.v
algorithm/: build.sh  exp.cpp  hardware_math.h  rcp.cpp  remez.py  sin.cpp  tanh.cpp  test_exp.cpp  test_rcp.cpp  test_sin.cpp  test_tanh.cpp  utils.cpp  utils.h
base_cpu/: build.sh  decoder.v  tb.v
cpp_test/: .gitignore  README.md
cpp_test/build_tools/cmake/: CMakeLists.txt  macros.cmake
cpp_test/test/: CMakeLists.txt  compare.cpp  format_test.cpp  graph_visit.cpp  read_mem_file.cpp  struct_str.cpp  type_id.cpp  zip.cpp
cpp_test/test/ipc_test/: recv.cpp  send.cpp
cpp_test/test/log_test/: CMakeLists.txt  log.cpp  log.h
cpp_test/test/log_test1/: CMakeLists.txt  log.h  test.cpp
decoder/: decoder.v
fetch_cpu/: fetch.v  reg.v  tb.v  top.v
pipe_cpu/: reg.v
simple_cpu/: reg.v  top.v
verilog/: .gitignore
verilog/add/: add.v
verilog/alu/: alu.v  tb.v
verilog/count/: count.v  tb.v
verilog/decoder/: alu.v  tb.v  top.v
verilog/fetch_cpu/: alu.v  core.v  decoder.v  reg.v  tb.v  top.v
verilog/fma/: common.v  t.ys
verilog/fma/addf/: addf.v  t.ys  tb_add.v
verilog/fma/find_first_1/: find_first_1.sv  t.ys  tb_find_first1.v  test_netlist.json
verilog/fma/fma/: common.sv  find_first1.v  fma.sv  fma.v  fma_s1.sv  fma_s1.v  fma_s2.sv  fma_s2.v  fma_s3.sv  fp32.py  mul.v  s1.ys  s2.ys  s3.ys  splitf.sv  tb_fma.sv  tb_fma.v  test_netlist.json
verilog/fma/fma1/: add_compressor.sv  add_full.sv  add_full.ys  booth.sv  booth.ys  build.sh  find_first1.sv  fma.sv  fma.ys  splitf.sv  splitf.ys  tb_booth.sv  tb_fma.cc  tb_fma.sv  utils.h
verilog/fma/mulf/: mulf.v  t.ys  tb_mul.v  test_netlist.json
verilog/pipe_cpu/: alu.v  tb.v  top.v
verilog/simt/: alu.v  common.v  decoder.v  reg.v  simt.v  tb.v
(+10 files in other folders)
